* 2007-08-15 - ben.pahne@open-xchange.com

 - Bug Fix 8880: It was possible to move contacts into the global
   address book. Fixed this.

* 2007-08-15 - tobias.prinz@open-xchange.com

 - Fixed bug in OldNPropertyDefinition causing NoSuchElementException.
   Preparation for bugfix #8844.
 - Bugfix #8844: Changed mailer to use v2.1 as format for attached
   VCards instead of v3.0, because Outlook 2003 has Problems with escaped
   commas.

* 2007-08-15 - thorben.betten@open-xchange.com

 - Special HTML entities moved to external properties file
 - Enhanced text2html conversion through including more HTML entities
 - Added check for duplicate infostore folder on user creation
 - Fixed usages of MailInterfaceMonitor.numActive
 - Removing unspecified initial ACLs on IMAP folder creation
 - Bugfix #8823: Allowing to look-up IMAP folder's ACLs if either READ or
   ADMINISTER right is granted to user
 - Bugfix #8900: Removed unnecessary informations from html error page
   template
 
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: new property file "HTMLEntities.properties" which
   holds known HTML entities and their character mapping
#####################################################

* 2007-08-15 - marcus.klein@open-xchange.com

 - Removed unused JNI SSL stuff.
 - Removed unused classes and methods.

* 2007-08-14 - martin.kauss@open-xchange.com

 - Fixed bug #8567. An exception of a recurring appointment could be moved
   into a different folder than the main object. This will now be avoided.
   In addition an exception can not have a different private state than the
   main object.

 - Fixed bug #8836. Updating a normal appointment and set the private flag
   failed. This has been fixed.

* 2007-08-14 - tobias.prinz@open-xchange.com

 - Bugfix #6825: Implemented new classes for translating fieldnames for
   Appointments/Calendar and Tasks. Now the users gets better hints what
   fields could not be imported.
